[docs] swagger createRoomDetail
